--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,24 +7,32 @@ edition = "2018"
 [dependencies]
 # smithay-client-toolkit = "0.16" # Client-side Wayland toolkit
 # wayland-client = "0.30"         # Core Wayland client library
-freedesktop_entry_parser = "1.2.0"
-locale-types = "0.4.0"
-libc = "0.2.103"
-gtk-layer-shell = "0.4.1"
-gtk = { version = "0.15.5", features = ["v3_22"] }
-gio = { version = "0.15.12", features = ["v2_60"] }
-gdk = "0.15.4"
-pango = "0.15.4"
-gdk-pixbuf = "0.15.11"
-glib = "0.15.12"
-futures = "0.3.21"
-fuzzy-matcher = "0.3.7"
-xdg = "2.4.1"
-serde = "1.0.138"
-serde_derive = "1.0.138"
-toml = "0.5.9"
-regex = "1.6.0"
-osstrtools = {git = "https://github.com/Artturin/osstrtools.git", rev="6360f4f842eb542ff4e62e75851ea8ba83808471"}
-shlex = "1.3.0"
-serde_json = "1.0"
-sysinfo = "0.35.0"
+
+#freedesktop_entry_parser = "1.2.0"
+#locale-types = "0.4.0"
+#libc = "0.2.103"
+#gtk-layer-shell = "0.4.1"
+#gtk = { version = "0.15.5", features = ["v3_22"] }
+#gio = { version = "0.15.12", features = ["v2_60"] }
+#gdk = "0.15.4"
+#pango = "0.15.4"
+#gdk-pixbuf = "0.15.11"
+#glib = "0.15.12"
+#futures = "0.3.21"
+#fuzzy-matcher = "0.3.7"
+#xdg = "2.4.1"
+#serde = "1.0.138"
+#serde_derive = "1.0.138"
+#toml = "0.5.9"
+#regex = "1.6.0"
+#osstrtools = {git = "https://github.com/Artturin/osstrtools.git", rev="6360f4f842eb542ff4e62e75851ea8ba83808471"}
+#shlex = "1.3.0"
+#serde_json = "1.0"
+#sysinfo = "0.35.0"
+
+eframe = "0.27"       # egui lib
+egui_extras = "0.27"  # layout/images support
+image = "0.25"        # PNG/JPEG ecc. loading
+
+xdg = "2.4"
+dirs = "5"
