--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,3 +28,4 @@ osstrtools = {git = "https://github.com/Artturin/osstrtools.git", rev="6360f4f84
 shlex = "1.3.0"
 serde_json = "1.0"
 sysinfo = "0.35.0"
+bytesize = "2.0.1"
